--- a/src/CustomList.Tests/CustomList.Tests.csproj
+++ b/src/CustomList.Tests/CustomList.Tests.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CustomList.Lib\CustomList.Lib.csproj" />
+    <ProjectReference Include="..\CustomList\CustomList.csproj" />
   </ItemGroup>
 
 </Project>
